--- a/CozmatikDukkan/CozmatikDukkan.csproj
+++ b/CozmatikDukkan/CozmatikDukkan.csproj
@@ -44,10 +44,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
@@ -140,6 +140,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\ManagerPanel\Controllers\CategoryController.cs" />
     <Compile Include="Areas\ManagerPanel\Controllers\HomeController.cs" />
     <Compile Include="Areas\ManagerPanel\Controllers\LoginController.cs" />
     <Compile Include="Areas\ManagerPanel\Filters\ManagerAuthenticationFilterAttribute.cs" />
@@ -149,6 +150,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\CozmatikModel.cs" />
     <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\ManagerType.cs" />
@@ -176,6 +178,11 @@
     <Content Include="Areas\ManagerPanel\Views\Shared\_LayoutPage1.cshtml" />
     <Content Include="Areas\ManagerPanel\Views\Home\Index.cshtml" />
     <Content Include="Areas\ManagerPanel\Views\Login\Index.cshtml" />
+    <Content Include="Areas\ManagerPanel\Views\Category\Create.cshtml" />
+    <Content Include="Areas\ManagerPanel\Views\Category\Delete.cshtml" />
+    <Content Include="Areas\ManagerPanel\Views\Category\Details.cshtml" />
+    <Content Include="Areas\ManagerPanel\Views\Category\Edit.cshtml" />
+    <Content Include="Areas\ManagerPanel\Views\Category\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
